[tool.poetry]
name = "repl_python3_SimpleApiServer"
version = "0.1.0"
description = ""
authors = ["technicalbot <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-RESTful = "^0.3.9"
pandas = "^1.4.0"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
